btn title font size change css

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #8cae60; }
+  background: #5de090; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1e4ec1; }
+  background: #5b381f; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #0e4c6c; }
+  background: #e4502f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #0b3d70; }
+  background: #143755; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #ea2bdc; }
+  background: #d3daaf; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #03c0b0; }
+  background: #920ab1; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #8d24d5; }
+  background: #97da04; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #bf57bf; }
+  background: #e1a9e7; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #860fe1; }
+  background: #4695ea; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #575e4f; }
+  background: #22ac22; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #6bfbb3; }
+  background: #2f025c; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #7eaf47; }
+  background: #277b4d; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #023b9f; }
+  background: #50ea8d; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7c82e1; }
+  background: #7b0b0e; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a5cad9; }
+  background: #37831e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #bf6b8a; }
+  background: #23c9ce; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #37a19a; }
+  background: #94a761; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #82ae79; }
+  background: #1770c7; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #2b904c; }
+  background: #96c418; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #46702d; }
+  background: #303623; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #e3a081; }
+  background: #011875; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #95d940; }
+  background: #115a98; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #8e44f3; }
+  background: #8f60f9; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #05518c; }
+  background: #ad6ac3; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #275e9e; }
+  background: #5882de; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #0429f8; }
+  background: #3e1903; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #33531b; }
+  background: #9815a6; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #e1ac1a; }
+  background: #fa553d; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #94f0c9; }
+  background: #1bd7db; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #17ce33; }
+  background: #da82fd; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #0c22d1; }
+  background: #6f6438; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #2d18d4; }
+  background: #32940a; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #829453; }
+  background: #26738c; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #0c57a6; }
+  background: #549502; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #57b81b; }
+  background: #e44ffd; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #85e608; }
+  background: #ae3682; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #3ac31b; }
+  background: #d5cacc; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #c3cc32; }
+  background: #920f42; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #4726c1; }
+  background: #97afc3; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #82cfda; }
+  background: #aaee4e; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #9e3cb3; }
+  background: #229445; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #25b82a; }
+  background: #9e2c3f; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f58b47; }
+  background: #b5ad10; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #4cc6e1; }
+  background: #8f656a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9c027f; }
+  background: #d18fcd; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6a2020; }
+  background: #2cf153; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #e16c3d; }
+  background: #867d4f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #fc4195; }
+  background: #d5f696; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #c04d65; }
+  background: #a34238; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #52445a; }
+  background: #18179a; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #b79c17; }
+  background: #10c84f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #290371; }
+  background: #8735fb; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #82e171; }
+  background: #c903f8; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #165e10; }
+  background: #c7cc39; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e4eb36; }
+  background: #66571f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #85dc3a; }
+  background: #94f52a; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c2d359; }
+  background: #af201d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #818fbb; }
+  background: #084557; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #7ad718; }
+  background: #084b6f; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #af128a; }
+  background: #a1a8ac; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #cb4e02; }
+  background: #7648fd; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #5a691f; }
+  background: #a59769; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #e2b25d; }
+  background: #62a8fd; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #5456ad; }
+  background: #add21b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ee5239; }
+  background: #e53af1; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #c6a163; }
+  background: #8ed157; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b2597b; }
+  background: #41ccfc; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #289a8c; }
+  background: #c11182; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0edfa2; }
+  background: #655f3c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #4a12ee; }
+  background: #557a64; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #99185c; }
+  background: #df1da2; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #807b26; }
+  background: #d5a350; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #0e5fd4; }
+  background: #75fc08; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #efd68e; }
+  background: #c273b2; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #e5fec5; }
+  background: #11cb0f; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #eef5a4; }
+  background: #042cd3; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #c3c891; }
+  background: #a4bd49; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #8ce874; }
+  background: #7751b1; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7cbd67; }
+  background: #969895; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c0c5ac; }
+  background: #debb02; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #dc1b9b; }
+  background: #e81878; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #688ee6; }
+  background: #16e615; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #706f59; }
+  background: #a66e0d; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #361bd3; }
+  background: #60b511; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #eac453; }
+  background: #d1a05a; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #3f8596; }
+  background: #502d33; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #b954a2; }
+  background: #feb541; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #df1d45; }
+  background: #8842ba; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #9854d7; }
+  background: #3394f9; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #d7623b; }
+  background: #d83d38; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #50a402; }
+  background: #58ab9e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #cfa49e; }
+  background: #d252bd; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #de6562; }
+  background: #c8f072; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9566df; }
+  background: #115fc0; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5237aa; }
+  background: #e04eca; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #725c0d; }
+  background: #67a034; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #266786; }
+  background: #bba04d; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #819f70; }
+  background: #33fb91; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4d628d; }
+  background: #4f388c; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #928eba; }
+  background: #a17751; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11707,6 +11707,7 @@ input:checked + .sliders:before {
       border-radius: 8px;
       color: #c0c0c0;
       font-weight: bold;
+      font-size: 14px;
       position: relative; }
       .process-button-wrapper ul li span::before {
         content: "";
