--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -1218,6 +1218,7 @@ input:checked+.sliders:before {
         border-radius: 8px;
         color: #c0c0c0;
         font-weight: bold;
+        font-size: 14px;
         position: relative;
 
         &::before {
