--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #5de090; }
+  background: #802b33; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5b381f; }
+  background: #ecd5a5; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e4502f; }
+  background: #1828f3; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #143755; }
+  background: #df8b1c; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #d3daaf; }
+  background: #52d885; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #920ab1; }
+  background: #db1ffd; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #97da04; }
+  background: #1b9fa6; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #e1a9e7; }
+  background: #63c34b; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #4695ea; }
+  background: #33a228; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #22ac22; }
+  background: #fbf342; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #2f025c; }
+  background: #8e78a0; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #277b4d; }
+  background: #eee1ed; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #50ea8d; }
+  background: #33c072; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7b0b0e; }
+  background: #357a51; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #37831e; }
+  background: #6ee00f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #23c9ce; }
+  background: #7c7d72; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #94a761; }
+  background: #789cba; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #1770c7; }
+  background: #533869; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #96c418; }
+  background: #f9b293; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #303623; }
+  background: #559da9; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #011875; }
+  background: #ba9fef; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #115a98; }
+  background: #22ef87; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #8f60f9; }
+  background: #90abf1; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #ad6ac3; }
+  background: #2347dd; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #5882de; }
+  background: #6a70af; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3e1903; }
+  background: #eaa81f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #9815a6; }
+  background: #af8f15; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #fa553d; }
+  background: #fef4d2; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #1bd7db; }
+  background: #3f9c3f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #da82fd; }
+  background: #e5f6a6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #6f6438; }
+  background: #c60cc7; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #32940a; }
+  background: #6534cf; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #26738c; }
+  background: #5b41e8; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #549502; }
+  background: #86debb; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e44ffd; }
+  background: #8fd14c; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ae3682; }
+  background: #eeb8ce; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d5cacc; }
+  background: #99d87d; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #920f42; }
+  background: #7cc2a7; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #97afc3; }
+  background: #58563d; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #aaee4e; }
+  background: #f0fea3; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #229445; }
+  background: #7c9eae; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #9e2c3f; }
+  background: #c0bff6; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #b5ad10; }
+  background: #d2ff4d; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #8f656a; }
+  background: #d90445; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #d18fcd; }
+  background: #1196b6; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #2cf153; }
+  background: #98578c; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #867d4f; }
+  background: #3afa3f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d5f696; }
+  background: #a3f0e2; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a34238; }
+  background: #d6af82; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #18179a; }
+  background: #3e6fea; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #10c84f; }
+  background: #b57ff6; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #8735fb; }
+  background: #54f81d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #c903f8; }
+  background: #291412; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #c7cc39; }
+  background: #644b2e; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #66571f; }
+  background: #95d739; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #94f52a; }
+  background: #3a9f64; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #af201d; }
+  background: #70fec0; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #084557; }
+  background: #c92324; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #084b6f; }
+  background: #1e9cd6; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #a1a8ac; }
+  background: #5cd6cf; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #7648fd; }
+  background: #f79f57; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a59769; }
+  background: #0d3c88; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #62a8fd; }
+  background: #f7c81d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #add21b; }
+  background: #c2dd46; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #e53af1; }
+  background: #344071; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #8ed157; }
+  background: #35a210; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #41ccfc; }
+  background: #8d1480; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c11182; }
+  background: #60023a; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #655f3c; }
+  background: #87d3f3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #557a64; }
+  background: #111240; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #df1da2; }
+  background: #1f47a1; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #d5a350; }
+  background: #25758c; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #75fc08; }
+  background: #1f92bb; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c273b2; }
+  background: #addd16; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #11cb0f; }
+  background: #2a6750; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #042cd3; }
+  background: #6d2670; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #a4bd49; }
+  background: #fb4f67; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #7751b1; }
+  background: #180a94; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #969895; }
+  background: #d52364; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #debb02; }
+  background: #b75b26; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #e81878; }
+  background: #b35430; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #16e615; }
+  background: #a032aa; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a66e0d; }
+  background: #b731f5; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #60b511; }
+  background: #837c5a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #d1a05a; }
+  background: #a747f3; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #502d33; }
+  background: #59c02c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #feb541; }
+  background: #18633f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8842ba; }
+  background: #8485e3; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #3394f9; }
+  background: #6650c8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #d83d38; }
+  background: #0ad1a4; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #58ab9e; }
+  background: #a24cec; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #d252bd; }
+  background: #4fd356; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c8f072; }
+  background: #58d71f; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #115fc0; }
+  background: #7020d4; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #e04eca; }
+  background: #022aab; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #67a034; }
+  background: #f0739a; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #bba04d; }
+  background: #eaa79d; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #33fb91; }
+  background: #2c1691; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4f388c; }
+  background: #4b16c5; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a17751; }
+  background: #b1d9d9; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11703,7 +11703,7 @@ input:checked + .sliders:before {
       background: #e0e0e1;
       border: 1px solid #e0e0e1;
       margin: 0px 15px;
-      padding: 15px 60px !important;
+      padding: 12px 60px !important;
       border-radius: 8px;
       color: #c0c0c0;
       font-weight: bold;
@@ -11725,15 +11725,16 @@ input:checked + .sliders:before {
     .process-button-wrapper ul .active-btn {
       background: #776fff;
       border: 1px solid #776fff;
-      padding: 20px 60px !important;
-      color: #fff; }
+      padding: 18px 60px !important;
+      color: #fff;
+      cursor: pointer; }
       .process-button-wrapper ul .active-btn::before {
         content: "";
         border-left: 8px solid #776fff; }
     .process-button-wrapper ul .sucess-active {
       background: #fff;
       border: 1px solid #776fff;
-      padding: 20px 60px !important;
+      padding: 18px 60px !important;
       color: #000;
       position: relative; }
       .process-button-wrapper ul .sucess-active::before {
@@ -11747,10 +11748,15 @@ input:checked + .sliders:before {
 .process-button-level-tow ul li span {
   background: transparent;
   border: 1px solid #776fff;
-  color: #000; }
+  color: #000;
+  cursor: pointer; }
   .process-button-level-tow ul li span::before {
     content: "";
     border-left: 8px solid #776fff; }
+.process-button-level-tow ul li .three-level-active-btn {
+  background: #776fff !important;
+  border: 1px solid #776fff !important;
+  color: #fff !important; }
 
 .policy-search .search-wrap-standard::before {
   display: none; }
@@ -11966,9 +11972,12 @@ input:checked + .sliders:before {
       .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
         width: 106px; }
 
-  .policy-btns-wrapper button {
-    margin-left: 0px;
-    font-size: 14px !important; }
+  .policy-btns-wrapper {
+    display: flex;
+    flex-direction: column; }
+    .policy-btns-wrapper button {
+      margin: 10px 0px;
+      font-size: 14px !important; }
 
   .process-button-wrapper {
     margin: 15px 0px 6px; }
@@ -11978,8 +11987,9 @@ input:checked + .sliders:before {
         height: auto; }
         .process-button-wrapper ul li span {
           margin: 6px 0px;
-          padding: 15px 60px !important;
-          display: block; }
+          padding: 12px 60px !important;
+          display: block;
+          text-align: center; }
           .process-button-wrapper ul li span::before {
             content: "";
             width: 0;
@@ -11989,19 +11999,20 @@ input:checked + .sliders:before {
             border-top: 8px solid #e0e0e1;
             position: absolute;
             top: 45px;
-            left: 50%; }
+            left: 48%; }
         .process-button-wrapper ul li .active-btn::before {
           content: "";
           border-left: 8px solid transparent;
           border-right: 8px solid transparent;
           border-top: 8px solid #776fff;
-          top: 56px;
-          left: 50%; }
+          top: 55px;
+          left: 48%; }
 
   .process-button-level-tow ul li span::before {
     content: "";
     border-top: 8px solid #776fff;
-    top: 47px; } }
+    top: 45px;
+    left: 48%; } }
 /*767 screen end here*/
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
   .query-wizard-exp-contents {
