policy center button changes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #802b33; }
+  background: #98900a; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #ecd5a5; }
+  background: #fa1023; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #1828f3; }
+  background: #329016; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #df8b1c; }
+  background: #7135a3; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #52d885; }
+  background: #a4dcfa; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #db1ffd; }
+  background: #6d1697; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #1b9fa6; }
+  background: #8a667b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #63c34b; }
+  background: #a8bc43; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #33a228; }
+  background: #2158b3; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #fbf342; }
+  background: #12c283; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8e78a0; }
+  background: #bac26a; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #eee1ed; }
+  background: #3bce79; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #33c072; }
+  background: #56d241; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #357a51; }
+  background: #f77f86; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #6ee00f; }
+  background: #a0cb7f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #7c7d72; }
+  background: #7eb51a; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #789cba; }
+  background: #ee5bd7; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #533869; }
+  background: #a9f25e; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #f9b293; }
+  background: #e5bcba; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #559da9; }
+  background: #8b1b28; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #ba9fef; }
+  background: #194ef9; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #22ef87; }
+  background: #8fd225; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #90abf1; }
+  background: #bc04e4; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #2347dd; }
+  background: #f2d44b; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #6a70af; }
+  background: #c6859b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #eaa81f; }
+  background: #c4aada; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #af8f15; }
+  background: #1a2d39; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #fef4d2; }
+  background: #df0990; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #3f9c3f; }
+  background: #aeb01c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #e5f6a6; }
+  background: #a8c2b3; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #c60cc7; }
+  background: #49a280; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #6534cf; }
+  background: #3f2ad6; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #5b41e8; }
+  background: #ed0fee; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #86debb; }
+  background: #df15a9; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #8fd14c; }
+  background: #6af8fa; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #eeb8ce; }
+  background: #417aae; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #99d87d; }
+  background: #fbfc38; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #7cc2a7; }
+  background: #6ac2b4; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #58563d; }
+  background: #c3ca7d; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f0fea3; }
+  background: #65fef6; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #7c9eae; }
+  background: #b0cc61; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #c0bff6; }
+  background: #973c4e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #d2ff4d; }
+  background: #fdbb6e; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d90445; }
+  background: #c02518; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1196b6; }
+  background: #da7785; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #98578c; }
+  background: #da3f33; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #3afa3f; }
+  background: #2bd0f5; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #a3f0e2; }
+  background: #e5e4c3; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #d6af82; }
+  background: #799ffd; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #3e6fea; }
+  background: #8ab2d7; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #b57ff6; }
+  background: #0f6c03; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #54f81d; }
+  background: #06de30; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #291412; }
+  background: #6d31f6; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #644b2e; }
+  background: #3f5d68; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #95d739; }
+  background: #283f85; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #3a9f64; }
+  background: #8043df; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #70fec0; }
+  background: #f02070; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #c92324; }
+  background: #1dd624; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #1e9cd6; }
+  background: #b1b0fc; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #5cd6cf; }
+  background: #27faf6; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #f79f57; }
+  background: #d022cd; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #0d3c88; }
+  background: #ce3174; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #f7c81d; }
+  background: #eaa8a8; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c2dd46; }
+  background: #f93ac6; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #344071; }
+  background: #c4b166; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #35a210; }
+  background: #7385b2; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #8d1480; }
+  background: #a93d35; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #60023a; }
+  background: #8255b6; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #87d3f3; }
+  background: #d80ef1; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #111240; }
+  background: #3d0c35; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #1f47a1; }
+  background: #be3bae; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #25758c; }
+  background: #92042e; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #1f92bb; }
+  background: #6db7a9; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #addd16; }
+  background: #5f61a7; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #2a6750; }
+  background: #0516ee; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #6d2670; }
+  background: #a70517; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #fb4f67; }
+  background: #41be10; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #180a94; }
+  background: #72340a; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #d52364; }
+  background: #cbd566; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b75b26; }
+  background: #16ac94; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b35430; }
+  background: #f3aaa8; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #a032aa; }
+  background: #2dd574; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b731f5; }
+  background: #af6b70; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #837c5a; }
+  background: #368f4a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #a747f3; }
+  background: #aaffd4; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #59c02c; }
+  background: #41842d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #18633f; }
+  background: #763a5e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8485e3; }
+  background: #21c003; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #6650c8; }
+  background: #8a6e73; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #0ad1a4; }
+  background: #303c6d; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #a24cec; }
+  background: #bf49c7; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #4fd356; }
+  background: #3283e3; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #58d71f; }
+  background: #9c57cd; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #7020d4; }
+  background: #8f9ce2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #022aab; }
+  background: #cef0d5; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #f0739a; }
+  background: #d30f2f; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #eaa79d; }
+  background: #a903d0; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #2c1691; }
+  background: #702f03; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4b16c5; }
+  background: #905ac4; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b1d9d9; }
+  background: #44ee58; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11701,9 +11701,9 @@ input:checked + .sliders:before {
     display: flex; }
     .process-button-wrapper ul li span {
       background: #e0e0e1;
-      border: 1px solid #e0e0e1;
+      border: 2px solid #e0e0e1;
       margin: 0px 15px;
-      padding: 12px 60px !important;
+      padding: 16px 80px !important;
       border-radius: 8px;
       color: #c0c0c0;
       font-weight: bold;
@@ -11724,8 +11724,8 @@ input:checked + .sliders:before {
       display: none; }
     .process-button-wrapper ul .active-btn {
       background: #776fff;
-      border: 1px solid #776fff;
-      padding: 18px 60px !important;
+      border: 2px solid #776fff;
+      padding: 26px 80px !important;
       color: #fff;
       cursor: pointer; }
       .process-button-wrapper ul .active-btn::before {
@@ -11733,8 +11733,8 @@ input:checked + .sliders:before {
         border-left: 8px solid #776fff; }
     .process-button-wrapper ul .sucess-active {
       background: #fff;
-      border: 1px solid #776fff;
-      padding: 18px 60px !important;
+      border: 2px solid #776fff;
+      padding: 26px 80px !important;
       color: #000;
       position: relative; }
       .process-button-wrapper ul .sucess-active::before {
@@ -11744,10 +11744,22 @@ input:checked + .sliders:before {
         width: 25px;
         right: 13px;
         top: 27%; }
+    .process-button-wrapper ul .sucess-active-small {
+      background: #fff;
+      border: 2px solid #776fff;
+      color: #000;
+      position: relative; }
+      .process-button-wrapper ul .sucess-active-small::before {
+        right: -5px; }
+      .process-button-wrapper ul .sucess-active-small img {
+        position: absolute;
+        width: 20px;
+        right: 13px;
+        top: 27%; }
 
 .process-button-level-tow ul li span {
   background: transparent;
-  border: 1px solid #776fff;
+  border: 2px solid #776fff;
   color: #000;
   cursor: pointer; }
   .process-button-level-tow ul li span::before {
@@ -11755,7 +11767,7 @@ input:checked + .sliders:before {
     border-left: 8px solid #776fff; }
 .process-button-level-tow ul li .three-level-active-btn {
   background: #776fff !important;
-  border: 1px solid #776fff !important;
+  border: 2px solid #776fff !important;
   color: #fff !important; }
 
 .policy-search .search-wrap-standard::before {
@@ -11772,7 +11784,7 @@ input:checked + .sliders:before {
     font-size: 14px; }
 .policy-accordions-wrapper .p-selected {
   background: #f0f0f0;
-  border: 1px solid #776fff; }
+  border: 2px solid #776fff; }
 
 .policy-btns-wrapper button {
   margin-left: 15px; }
@@ -11987,7 +11999,7 @@ input:checked + .sliders:before {
         height: auto; }
         .process-button-wrapper ul li span {
           margin: 6px 0px;
-          padding: 12px 60px !important;
+          padding: 16px 80px !important;
           display: block;
           text-align: center; }
           .process-button-wrapper ul li span::before {
@@ -12005,13 +12017,13 @@ input:checked + .sliders:before {
           border-left: 8px solid transparent;
           border-right: 8px solid transparent;
           border-top: 8px solid #776fff;
-          top: 55px;
+          top: 66px;
           left: 48%; }
 
   .process-button-level-tow ul li span::before {
     content: "";
     border-top: 8px solid #776fff;
-    top: 45px;
+    top: 46px;
     left: 48%; } }
 /*767 screen end here*/
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
